# investment_tracker_beta-v1

./: app.py  form_helpers.py  forms.py  package.json  pyproject.toml  report_generator.py  routes.py  stock_utils.py
attached_assets/: FIXES_SUMMARY.md  README.md  app.py  check_server.py  form_helpers.py  forms.py  main.py  models.py  pyproject.toml  report_generator.py  routes.py  stock_utils.py  test_db.py  test_stock_utils.py
static/css/: custom.css
static/js/: charts.js  dashboard.js  portfolio.js  watchlist.js
templates/: 404.html  500.html  dashboard.html  edit_portfolio_item.html  index.html  layout.html  login.html  portfolio.html  register.html  reports.html  watchlist.html
