[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.61",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "numpy>=2.2.5",
    "python-dateutil>=2.9.0.post0",
    "wtforms>=3.2.1",
    "fpdf>=1.7.2",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "trafilatura>=2.0.0",
]
