[project]
name = "investor-dashboard"
version = "0.1.0"
description = "Investment portfolio tracking dashboard"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.2",
    "flask>=2.3.3",
    "flask-sqlalchemy>=3.0.5",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.7",
    "flask-wtf>=1.1.1",
    "fpdf>=1.7.2",
    "openpyxl>=3.1.2",
    "pandas>=2.0.3",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.20",
    "werkzeug>=2.3.7",
    "wtforms>=3.0.1",
    "yfinance>=0.2.28",
    "numpy>=1.25.2",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "models", "stock_utils", "report_generator", "routes", "forms", "form_helpers", "main"]
